# immortal

./: .gitignore  CHANGELOG.md  catalog.json  version.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: catalog.json
app/src/main/java/com/immortal/launcher/: AlbumUrlEntryActivity.kt  ApkBrowserActivity.kt  ApkInstallActivity.kt  BootReceiver.kt  CameraConfig.kt  CameraViewerActivity.kt  ChimeConfig.kt  ChimePlayer.kt  ChimeReceiver.kt  ChimeScheduler.kt  ChimeSettingsActivity.kt  DevMode.kt  DreamPolicy.kt  FaceRenderer.kt  FleetCalendar.kt  FleetRoutes.kt  FleetScreensaver.kt  HelpActivity.kt  HomeActivity.kt  ImmortalApp.kt  ImmortalSettings.kt  ImmortalSettingsActivity.kt  ImmortalSubScreens.kt  InstallDaemon.kt  MaControl.kt  PhotoCaption.kt  PhotoFrameController.kt  PhotoFramePreviewActivity.kt  RemoteAlbum.kt  RemoteHtml.kt  ScreenControl.kt  SettingsComponents.kt  SettingsGuard.kt  StoreActivity.kt  UpdateManager.kt  Weather.kt
app/src/main/java/com/immortal/launcher/settings/: SettingsDomains.kt
app/src/test/java/com/immortal/launcher/: DevModeTest.kt  FleetCalendarTest.kt  FleetScreensaverTest.kt  RemoteAlbumTest.kt  UserLayoutTest.kt
app/src/test/java/com/immortal/launcher/settings/: FleetSettingsTest.kt  SettingsDomainTest.kt
provisioning/: .gitignore  Cargo.toml  README.md  bspatch.cmd  bspatch.js  fleet-backup.sh  fleet-restore.sh  fleet.rs  provision.ps1  provision.sh
